se trabaja un poco con el frontend

--- a/tallerIIpractico3/wwwroot/css/site.css
+++ b/tallerIIpractico3/wwwroot/css/site.css
@@ -59,8 +59,9 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    background-image: url('../img/9846.jpg');
 }
 .footer {
   position: absolute;
