--- a/tallerIIpractico3/Views/Home/Index.cshtml
+++ b/tallerIIpractico3/Views/Home/Index.cshtml
@@ -2,7 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div>
-    <a type="button" class="btn btn-primary" asp-area="" asp-controller="Cadete" asp-action="Index">Cadete</a>
-    <a type="button" class="btn btn-primary" asp-area="" asp-controller="Pedido" asp-action="Index">Pedido</a>
+<div class="col-7">
+    
+    <a asp-area="" asp-controller="Cadete" asp-action="Index" class="rounded float-start"> 
+        <img class="border border-secondary" src="~/img/cadete2.png" style="width: 120px">
+    </a>
+    <a asp-area="" asp-controller="Pedido" asp-action="Index" class="rounded float-end">
+        <img src="~/img/pedido.jpg" class="border border-secondary" style="width: 112px">
+    </a>
+
 </div>
