se trabaja con las vistas y elimino controlador cadeteria

--- a/tallerIIpractico3/Views/Cadete/Index.cshtml
+++ b/tallerIIpractico3/Views/Cadete/Index.cshtml
@@ -6,7 +6,7 @@
 
 
 <div class="text-center">
-    <h2 class="display-4">Lista de cadetes</h2>
+    <p class="titulo3">Lista de cadetes</p>
 </div>
 
 <a type="button" asp-action="CreateCadete" class="btn btn-primary">Crear Cadete</a>
