--- a/tallerIIpractico3/Views/Home/Index.cshtml
+++ b/tallerIIpractico3/Views/Home/Index.cshtml
@@ -2,13 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="col-7">
+<div class="" style="border-bottom: solid black 1px; border-left: solid black 1px; padding: 1em ">
     
-    <a asp-area="" asp-controller="Cadete" asp-action="Index" class="rounded float-start"> 
-        <img class="border border-secondary" src="~/img/cadete2.png" style="width: 120px">
+    <a asp-area="" asp-controller="Cadete" asp-action="Index"> 
+        <img src="~/img/cadete2.png" class="border border-secondary" style="width: 90px">
     </a>
-    <a asp-area="" asp-controller="Pedido" asp-action="Index" class="rounded float-end">
-        <img src="~/img/pedido.jpg" class="border border-secondary" style="width: 112px">
+    <a asp-area="" asp-controller="Pedido" asp-action="Index">
+        <img src="~/img/pedido.jpg" class="border border-secondary" style="width: 84px">
     </a>
 
 </div>
