--- a/tallerIIpractico3/Views/Pedido/ListaPedidos.cshtml
+++ b/tallerIIpractico3/Views/Pedido/ListaPedidos.cshtml
@@ -1,11 +1,10 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@{
-}
 
-<div class="text-center">
-    <h1 class="display-4">Lista de Pedidos</h1>
+
+<div>
+    <p class="titulo3">Lista de Pedidos</p>
 </div>
 <div class="container">
 
@@ -27,7 +26,7 @@
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
         </div>
-        <div class="col-3" style="text-align:right">
+        <div class="col-4">
             <a type="button" class="btn btn-primary" asp-area="" asp-controller="Pedido" asp-action="ListaPedidos">Borrar Lista</a>
             <a type="button" class="btn btn-primary" asp-area="" asp-controller="Pedido" asp-action="ListaCompleta">Lista Completa</a>
         </div>
