--- a/tallerIIpractico3/Views/Shared/_Layout.cshtml
+++ b/tallerIIpractico3/Views/Shared/_Layout.cshtml
@@ -12,14 +12,10 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Cadeteria</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cadeteria" asp-action="Index">Lista de Cadetes</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cadete" asp-action="ListarCadetes">Lista de Cadetes</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Pedido" asp-action="ListaPedidos">Lista de Pedidos</a>
