--- a/tallerIIpractico3/wwwroot/css/site.css
+++ b/tallerIIpractico3/wwwroot/css/site.css
@@ -70,3 +70,11 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.titulo3 {
+    text-align: left;
+    font-size: 2.5em;
+    color:dimgrey;
+    padding: 10px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
