se cambia las fuentes, y se agrega placeholder a los formularios

--- a/tallerIIpractico3/Views/Cadete/CreateCadete.cshtml
+++ b/tallerIIpractico3/Views/Cadete/CreateCadete.cshtml
@@ -10,19 +10,19 @@
                     <legend class="">Registrar un cadete</legend>
                     <div class="mb-3">
                         <label for="nom" class="form-label">Nombre</label>
-                        <input type="text" id="nom" class="form-control" name="nom" required>
+                        <input type="text" id="nom" class="form-control" name="nom" placeholder="López, David" required>
                     </div>
                     <div class="mb-3">
                         <label for="dni" class="form-label">DNI</label>
-                        <input type="text" id="dni" class="form-control" name="dni" required>
+                        <input type="text" id="dni" class="form-control" name="dni" placeholder="40786667" required>
                     </div>
                     <div class="mb-3">
                         <label for="dir" class="form-label">Dirección</label>
-                        <input type="text" id="dir" class="form-control" name="dir" required>
+                        <input type="text" id="dir" class="form-control" name="dir" placeholder="San Lorenzo 789" required>
                     </div>
                     <div class="mb-3">
                         <label for="tel" class="form-label">Teléfono</label>
-                        <input type="text" id="tel" class="form-control" name="tel" required>
+                        <input type="text" id="tel" class="form-control" name="tel" placeholder="3815456876" required>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </fieldset>
