--- a/tallerIIpractico3/Views/Cadete/FormModificarCadete.cshtml
+++ b/tallerIIpractico3/Views/Cadete/FormModificarCadete.cshtml
@@ -22,7 +22,7 @@
                         <input type="text" id="tel" class="form-control" name="tel" value="@Model.Telefono" required>
                     </div>
                     <input type="number" id="id" class="form-control" name="id" value="@Model.Id" hidden>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
                 </fieldset>
             </form>
         </div>
