--- a/tallerIIpractico3/Views/Pedido/Index.cshtml
+++ b/tallerIIpractico3/Views/Pedido/Index.cshtml
@@ -15,22 +15,22 @@
                         
                         <div class="mb-3">
                             <label for="obs" class="form-label">Observaciones</label>
-                            <input type="text" id="obs" class="form-control" name="obs" required>
+                            <input type="text" id="obs" class="form-control" name="obs" placeholder="paquete mediano hasta 3KG" required>
                         </div>
                         <div class="mb-3">
                             <input type="text" id="est" class="form-control" name="est"  value="@tallerIIpractico3.entities.Estado.En_camino" hidden>
                         </div>
                         <div class="mb-3">
                             <label for="nom" class="form-label">Nombre</label>
-                            <input type="text" id="nom" class="form-control" name="nom" required>
+                            <input type="text" id="nom" class="form-control" name="nom" placeholder="Ozzy Osbourne" required>
                         </div>
                         <div class="mb-3">
                             <label for="dir" class="form-label">Dirección</label>
-                            <input type="text" id="dir" class="form-control" name="dir" required>
+                            <input type="text" id="dir" class="form-control" name="dir" placeholder="Av Belgrano 1987" required>
                         </div>
                         <div class="mb-3">
                             <label for="tel" class="form-label">Teléfono</label>
-                            <input type="text" id="tel" class="form-control" name="tel" required>
+                            <input type="text" id="tel" class="form-control" name="tel" placeholder="3816726789" required>
                         </div>
                         <div class="mb-3">
                             <label for="cadete" class="form-label">Cadete</label>
