--- a/tallerIIpractico3/Views/Cadete/ConfirmarEliminarCadete.cshtml
+++ b/tallerIIpractico3/Views/Cadete/ConfirmarEliminarCadete.cshtml
@@ -3,8 +3,8 @@
 *@
 @model tallerIIpractico3.entities.Cadete
 
-<div class="text-center">
-    <h3 class="display-4">¿Confirma eliminar cadete?</h3>
+<div class="text-left">
+    <p class="titulo3">¿Confirma eliminar cadete?</p>
 </div>
 
 
