--- a/tallerIIpractico3/Views/Home/Index.cshtml
+++ b/tallerIIpractico3/Views/Home/Index.cshtml
@@ -5,10 +5,10 @@
 <div class="" style="border-bottom: solid black 1px; border-left: solid black 1px; padding: 1em ">
     
     <a asp-area="" asp-controller="Cadete" asp-action="Index"> 
-        <img src="~/img/cadete2.png" class="border border-secondary" style="width: 90px">
+        <img src="~/img/cadete.jpg" class="border border-secondary" style="width: 82px">
     </a>
     <a asp-area="" asp-controller="Pedido" asp-action="Index">
-        <img src="~/img/pedido.jpg" class="border border-secondary" style="width: 84px">
+        <img src="~/img/pedido.jpg" class="border border-secondary" style="width: 100px">
     </a>
 
 </div>
