css en el index de home y se quita librerias de startup

--- a/tallerIIpractico3/Views/Home/Index.cshtml
+++ b/tallerIIpractico3/Views/Home/Index.cshtml
@@ -3,16 +3,20 @@
 }
 
 <div class="" style="border-bottom: solid black 1px; border-left: solid black 1px; padding: 1em ">
-    <div style="width: 85px">
+    <div class="botones-home">
         <a asp-area="" asp-controller="Cadete" asp-action="Index">
-            <img src="~/img/cadete.jpg" class="border border-secondary" style="width: 82px">
-            <fieldset style="text-align:center">Cadetes</fieldset>
+            <img src="~/img/cadete.jpg" style="width: 82px" class="border border-secondary">
+            <div class="overlay">
+                <div class="text" style="margin-top: 25px">Cadetes</div>
+            </div>
         </a>
     </div>
-    <div style="width: 87px">
+    <div class="botones-home">
         <a asp-area="" asp-controller="Pedido" asp-action="Index">
-            <img src="~/img/pedido.jpg" class="border border-secondary" style="width: 84px">
-            <fieldset style="text-align:center">Pedidos</fieldset>
+            <img src="~/img/pedido.jpg" style="width: 82px" class="border border-secondary">
+            <div class="overlay">
+                <div class="text" style="margin-top: 25px">Pedidos</div>
+            </div>
         </a>
     </div>
 
