arreglos al html

--- a/tallerIIpractico3/Views/Cadete/Index.cshtml
+++ b/tallerIIpractico3/Views/Cadete/Index.cshtml
@@ -20,25 +20,26 @@
             <th>Direccion</th>
             <th>Pedidos Pendientes</th>
             <th></th>
+            <th></th>
 
         </tr>
         @if (Model != null)
         {
             foreach (var item in Model)
             {
-    <tr>
-        <td>@item.Id</td>
-        <td>@item.Nombre</td>
-        <td>@item.Dni</td>
-        <td>@item.Direccion</td>
-        <td>@item.Pedidos.Count()</td>
-        <td><a button type="button" class="btn btn-secondary btn-sm" href="Cadete/PagarACadete?id=@item.Id" style="margin:2px">Pagar</a></td>
-        <td>
-            <a button type="button" class="btn btn-secondary btn-sm" href="Cadete/FormModificarCadete?id=@item.Id" style="margin:2px">Modificar</a>
-            <a button type="button" class="btn btn-secondary btn-sm" href="Cadete/ConfirmarEliminarCadete?id=@item.Id" style="margin:2px">Eliminar</a>
-        </td>
+            <tr>
+                <td>@item.</td>
+                <td>@item.Nombre</td>
+                <td>@item.Dni</td>
+                <td>@item.Direccion</td>
+                <td>@item.Pedidos.Count()</td>
+                <td><a button type="button" class="btn btn-secondary btn-sm" href="Cadete/PagarACadete?id=@item.Id" style="margin:2px">Pagar</a></td>
+                <td>
+                    <a button type="button" class="btn btn-secondary btn-sm" href="Cadete/FormModificarCadete?id=@item.Id" style="margin:2px">Modificar</a>
+                    <a button type="button" class="btn btn-secondary btn-sm" href="Cadete/ConfirmarEliminarCadete?id=@item.Id" style="margin:2px">Eliminar</a>
+                </td>
 
-    </tr>
+            </tr>
             }
         }
 
