--- a/tallerIIpractico3/Views/Pedido/ListaFiltrada2.cshtml
+++ b/tallerIIpractico3/Views/Pedido/ListaFiltrada2.cshtml
@@ -19,7 +19,7 @@
                 </div>
                 <div style="display:inline-block">
                     <div class="mb-3">
-                        <label for="fechaFinal" class="form-label">Fecha inicial</label>
+                        <label for="fechaFinal" class="form-label">Fecha final</label>
                         <input type="date" id="fechaFinal" class="form-control" name="fechaFinal" required>
                     </div>
                 </div>
