--- a/tallerIIpractico3/Views/Cadete/Index.cshtml
+++ b/tallerIIpractico3/Views/Cadete/Index.cshtml
@@ -27,10 +27,10 @@
             foreach (var item in Model)
             {
             <tr>
-                <td>@item.</td>
+                <td>@item.Id</td>
                 <td>@item.Nombre</td>
                 <td>@item.Direccion</td>
-                <td>@item.Pedidos.Count()</td>
+                <td></td>
                 <td><a button type="button" class="btn btn-secondary btn-sm" href="Cadete/PagarACadete?id=@item.Id" style="margin:2px">Pagar</a></td>
                 <td>
                     <a button type="button" class="btn btn-secondary btn-sm" href="Cadete/FormModificarCadete?id=@item.Id" style="margin:2px">Modificar</a>
