--- a/tallerIIpractico3/Views/Cadete/PagarACadete.cshtml
+++ b/tallerIIpractico3/Views/Cadete/PagarACadete.cshtml
@@ -24,9 +24,9 @@
         @foreach (var item in Model.Pedidos)
         {
             <tr>
-                <td>@item.Nro</td>
+                <td>@item.Id</td>
                 <td>@item.Cliente.Direcccion</td>
-                <td>@item.Est</td>
+                <td>@item.Estado</td>
             </tr>
           
         }
