--- a/tallerIIpractico3/Views/Pedido/ListaCompleta.cshtml
+++ b/tallerIIpractico3/Views/Pedido/ListaCompleta.cshtml
@@ -36,12 +36,11 @@
 <div>
     <table class="table table-striped" style="text-align:center">
         <tr>
-            <th>Nro</th>
+            <th>Id</th>
             <th>Fecha/Hora</th>
             <th>Observacion</th>
             <th>Cliente</th>
             <th>Direccion</th>
-            <th>Cadete</th>
             <th>Estado</th>
         </tr>
         @if (Model.Count() != 0)
@@ -50,31 +49,30 @@
             foreach (var item in Model)
             {
                 <tr>
-                    <td>@item.Nro</td>
-                    <td>@item.FechaHora</td>
-                    <td>@item.Obs</td>
+                    <td>@item.Id</td>
+                    <td>@item.Fecha</td>
+                    <td>@item.Observaciones</td>
                     <td>@item.Cliente.Nombre</td>
                     <td>@item.Cliente.Direcccion</td>
-                    <td>@item.NomCadete</td>
                     <td>
                         <form asp-controller="Pedido" asp-action="ModificarPedidoListaCompleta" method="post">
-                            <input type="number" name="nroPedido" value="@item.Nro" hidden>
+                            <input type="number" name="nroPedido" value="@item.Id" hidden>
                             <select id="estado" name="estadoPedido">
-                                <option value="" selected>@item.Est</option>
-                                @if (item.Est == tallerIIpractico3.entities.Estado.En_camino)
+                                <option value="" selected>@item.Estado</option>
+                                @if (item.Estado == tallerIIpractico3.entities.Estado.En_camino.ToString())
                                 {
                                     <option value="@tallerIIpractico3.entities.Estado.Entregado">Entregado</option>
                                     <option value="@tallerIIpractico3.entities.Estado.No_entregado">No Entregado</option>
                                 }
                             </select>
-                            @if (item.Est == tallerIIpractico3.entities.Estado.En_camino)
+                            @if (item.Estado == tallerIIpractico3.entities.Estado.En_camino.ToString())
                             {
                                 <button type="submit" class="btn btn-primary">Cambiar</button>
                             }
                         </form>
                     </td>
                 </tr>
-                if (item.Est == tallerIIpractico3.entities.Estado.Entregado)
+                if (item.Estado == tallerIIpractico3.entities.Estado.Entregado.ToString())
                 {
                     Entregados++;
                 }
