--- a/tallerIIpractico3/Views/Cadete/Index.cshtml
+++ b/tallerIIpractico3/Views/Cadete/Index.cshtml
@@ -33,7 +33,7 @@
                 <td></td>
                 <td><a button type="button" class="btn btn-secondary btn-sm" href="Cadete/PagarACadete?id=@item.Id" style="margin:2px">Pagar</a></td>
                 <td>
-                    <a button type="button" class="btn btn-secondary btn-sm" href="Cadete/FormModificarCadete?id=@item.Id" style="margin:2px">Modificar</a>
+                    <a button type="button" class="btn btn-secondary btn-sm" href="Cadete/FormUpdateCadete?id=@item.Id" style="margin:2px">Modificar</a>
                     <a button type="button" class="btn btn-secondary btn-sm" href="Cadete/ConfirmarEliminarCadete?id=@item.Id" style="margin:2px">Eliminar</a>
                 </td>
 
