--- a/tallerIIpractico3/Views/Cadete/PagarACadete.cshtml
+++ b/tallerIIpractico3/Views/Cadete/PagarACadete.cshtml
@@ -25,8 +25,8 @@
         {
             <tr>
                 <td>@item.Id</td>
-                <td>@item.Cliente.Direcccion</td>
-                <td>@item.Estado</td>
+                <td>@item.Cliente.Direccion</td>
+                <td>@item.EstadoPedido</td>
             </tr>
           
         }
