--- a/tallerIIpractico3/Views/Pedido/Index.cshtml
+++ b/tallerIIpractico3/Views/Pedido/Index.cshtml
@@ -1,61 +1,67 @@
-﻿@{
-    ViewData["Title"] = "Pedidos Page";
+﻿@model List<tallerIIpractico3.entities.Pedido>
+
+@{
+    ViewData["Title"] = "Index";
 }
 
-@model List<tallerIIpractico3.entities.Cadete> 
+<h1>Index</h1>
 
-<div class="container">
-    <div class="row">
-        <div class="col-6">
-            <form asp-controller="Pedido" asp-action="crearPedido" method="post">
-                <fieldset>
-                    <legend class="">Tomar pedido</legend>
-                    @if (Model.Count() != 0)
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                id
+            </th>
+            <th>
+               Fecha - Hora
+            </th>
+            <th>
+                Observaciones
+            </th>
+            <th>
+                Estado del pedido
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Fecha)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Observaciones)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EstadoPedido)
+            </td>
+            <td>
+                <form asp-controller="Pedido" asp-action="UpdatePedido" method="post">
+                    <input type="number" name="pedidoId" value="@item.Id" hidden>
+                    <select id="estado" name="estadoPedido">
+                        <option value="" selected>@item.EstadoPedido</option>
+                        @if (item.EstadoPedido == tallerIIpractico3.entities.Estado.En_camino.ToString())
+                        {
+                            <option value="@tallerIIpractico3.entities.Estado.Entregado">Entregado</option>
+                            <option value="@tallerIIpractico3.entities.Estado.No_entregado">No Entregado</option>
+                        }
+                    </select>
+                    @if (item.EstadoPedido == tallerIIpractico3.entities.Estado.En_camino.ToString())
                     {
-                        
-                        <div class="mb-3">
-                            <label for="obs" class="form-label">Observaciones</label>
-                            <input type="text" id="obs" class="form-control" name="obs" placeholder="paquete mediano hasta 3KG" required>
-                        </div>
-                        <div class="mb-3">
-                            <input type="text" id="est" class="form-control" name="est"  value="@tallerIIpractico3.entities.Estado.En_camino" hidden>
-                        </div>
-                        <div class="mb-3">
-                            <label for="nom" class="form-label">Nombre</label>
-                            <input type="text" id="nom" class="form-control" name="nom" placeholder="Ozzy Osbourne" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="dir" class="form-label">Dirección</label>
-                            <input type="text" id="dir" class="form-control" name="dir" placeholder="Av Belgrano 1987" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="tel" class="form-label">Teléfono</label>
-                            <input type="text" id="tel" class="form-control" name="tel" placeholder="3816726789" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="cadete" class="form-label">Cadete</label>
-                            <select id="cadete" name="idCadete">
-                                <option value="">Seleccione</option>
-                                @foreach (var item in Model)
-                                {
-                                    <option value="@item.Id">@item.Nombre (@item.Pedidos.Count())</option>
-                                }
-                            </select>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Enviar</button>
-
+                        <button type="submit" class="btn btn-primary">Cambiar</button>
                     }
-                    else if (Model.Count() == 0)
-                    {
-                        <div class="mb-3">
-                            <label for="dir" class="form-label">Sin cadetes para tomar el pedido</label>
-                            <a type="button" asp-controller="Cadete" asp-action="CreateCadete" class="btn btn-primary">Crear Cadete</a>
-                        </div>
-                    }
+                </form>
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ })
 
-                </fieldset>
-            </form>
-        </div>
-    </div>
-</div>
-
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
