--- a/tallerIIpractico3/Views/Shared/_Layout.cshtml
+++ b/tallerIIpractico3/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" asp-controller="Cadete" asp-action="CreateCadete">Agregar Nuevo</a>
-                                <a class="dropdown-item" asp-controller="Cadete" asp-action="Index">Lista</a>
+                                <a class="dropdown-item" asp-controller="Cadete" asp-action="IndexCadete">Lista</a>
                             </div>
                         </li>
                         <li class="dropdown">
@@ -34,7 +34,7 @@
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" asp-controller="Pedido" asp-action="CreateView">Agregar Nuevo</a>
-                                <a class="dropdown-item" asp-controller="Pedido" asp-action="Index">Lista</a>
+                                <a class="dropdown-item" asp-controller="Pedido" asp-action="IndexPedido">Lista</a>
                             </div>
                         </li>
                         <li class="dropdown">
@@ -43,7 +43,7 @@
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" asp-controller="Cliente" asp-action="CreateView">Agregar Nuevo</a>
-                                <a class="dropdown-item" asp-controller="Cliente" asp-action="Index">Lista</a>
+                                <a class="dropdown-item" asp-controller="Cliente" asp-action="IndexCliente">Lista</a>
                             </div>
                         </li>
 
