--- a/tallerIIpractico3/Views/Pedido/CreateView.cshtml
+++ b/tallerIIpractico3/Views/Pedido/CreateView.cshtml
@@ -1,44 +1,41 @@
-﻿@model List<tallerIIpractico3.entities.Cadete> 
+﻿@model tallerIIpractico3.ViewModel.CreatePedidoNewCliente_ViewModel 
 
 @{
     ViewData["Title"] = "CreateView";
 }
-
-
 
 <h4>Pedido - Nuevo Cliente</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-controller="Pedido" asp-action="CreatePedido">
-            
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
             <div class="form-group">
-                <label for="obs" class="form-label">Observaciones</label>
-                <input type="text" id="obs" class="form-control" name="obs" placeholder="Paquete mediano 2Kg" required>    
+                <label asp-for="PedidoObs" class="control-label">Observaciones</label>
+                <input asp-for="PedidoObs" class="form-control" />
+                <span asp-validation-for="PedidoObs" class="text-danger"></span>
             </div>
-
-             <div class="mb-3">
-                <label for="nom" class="form-label">Nombre</label>
-                <input type="text" id="nom" class="form-control" name="nom" placeholder="Ozzy Osbourne" required>
+            <div class="form-group">
+                <label asp-for="Cliente.Nombre" class="control-label">Nombre</label>
+                <input asp-for="Cliente.Nombre" class="form-control" />
+                <span asp-validation-for="Cliente.Nombre" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Cliente.Direccion" class="control-label">Direccion</label>
+                <input asp-for="Cliente.Direccion" class="form-control" />
+                <span asp-validation-for="Cliente.Direccion" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Cliente.Telefono" class="control-label">Telefono</label>
+                <input asp-for="Cliente.Telefono" class="form-control" />
+                <span asp-validation-for="Cliente.Telefono" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label for="dir" class="form-label">Dirección</label>
-                <input type="text" id="dir" class="form-control" name="dir" placeholder="Av Belgrano 1987" required>
-            </div>
-            <div class="mb-3">
-                <label for="tel" class="form-label">Teléfono</label>
-                <input type="text" id="tel" class="form-control" name="tel" placeholder="3816726789" required>
-            </div>
-            <div class="mb-3">
-                <label for="cadete" class="form-label">Cadete</label>
-                <select id="cadete" name="cadeteId">
-                    <option value="">Seleccione</option>
-                    @foreach (var item in Model)
-                    {
-                        <option value="@item.Id">@item.Nombre</option>
-                    }
+                <label asp-for="CadeteId" class="control-label">Cadete</label>
+                <select asp-for="CadeteId" asp-items="@(new SelectList(Model.Cadetes, "Id", "Nombre"))">
                 </select>
+
             </div>
          
             <div class="form-group">
