--- a/tallerIIpractico3/Views/Usuario/IndexUsuario.cshtml
+++ b/tallerIIpractico3/Views/Usuario/IndexUsuario.cshtml
@@ -1,14 +1,4 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Bootstrap Simple Login Form</title>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+﻿<head>
 <style>
 .login-form {
     width: 340px;
@@ -30,7 +20,6 @@
 }
 .btn {        
     font-size: 15px;
-    font-weight: bold;
 }
 </style>
 </head>
@@ -57,4 +46,3 @@
     <p class="text-center"><a asp-controller= "Usuario" asp-action= "CreateUsuarioView">Registración</a></p>
 </div>
 </body>
-</html>
