--- a/tallerIIpractico3/Views/Cliente/CreateView.cshtml
+++ b/tallerIIpractico3/Views/Cliente/CreateView.cshtml
@@ -1,11 +1,12 @@
 ﻿@model tallerIIpractico3.entities.Cliente
 
 
-<h4>Cliente</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-controller="Cliente" asp-action="CreateCliente">
+            <fieldset>
+            <legend>Nuevo Cliente</legend>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
             <div class="form-group">
@@ -23,6 +24,7 @@
                 <input asp-for="Telefono" class="form-control" />
                 <span asp-validation-for="Telefono" class="text-danger"></span>
             </div>
+            </fieldset>
             <div class="form-group">
                 <input type="submit" value="Enviar" class="btn btn-primary" />
             </div>
